[package]
authors = ["pdGilbert"]
categories = ["embedded", "no-std"]
description = "echo between serial interfaces, embedded-io example"
keywords = ["serial", "embedded-io", "example"]
license = "MIT OR Apache-2.0"
name = "echo"
version = "0.0.1"
edition = "2021"

[dependencies]
stm32f4xx-hal = { version = "0.20.0", optional = true } 
stm32g4xx-hal = { git = "https://github.com/techmccat/stm32g4xx-hal", optional = true, branch = "hal-1" }
stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal",  optional = true, branch = "eh-v1.0"}

embedded-hal = "1.0"
embedded-io  = "0.6.1"

embedded-graphics = ">=0.7"
heapless = "0.7"
cortex-m-rt = ">=0.7.0"
cortex-m-semihosting = { version = "0.5.0" }
panic-halt           = { version = ">=0.2.0" }
panic-semihosting    = { version = ">=0.6.0" }

[features]
stm32f4xx = ["stm32f4xx-hal" ] 
stm32g4xx = ["stm32g4xx-hal" ]
stm32h7xx = ["stm32h7xx-hal" ]

stm32f401     = ["stm32f4xx-hal/stm32f401"  ] 
stm32f411     = ["stm32f4xx-hal/stm32f411"  ] 
stm32g473     = ["stm32g4xx-hal/stm32g473"  ]
stm32g474     = ["stm32g4xx-hal/stm32g474"  ]
stm32h742     = ["stm32h7xx-hal/stm32h742"  ]
